--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -11,5 +11,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          fetch-depth: 0
       - name: Pull code
         run: git pull
