--- a/.github/workflows/autopull.yml
+++ b/.github/workflows/autopull.yml
@@ -15,4 +15,4 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Pull latest changes
         run: |
-          ssh root@159.65.144.36 "cd /tmp/test && git pull"
+          "cd /tmp/test && git pull"
