--- a/.github/workflows/autopull.yml
+++ b/.github/workflows/autopull.yml
@@ -1,18 +1,21 @@
-name: Auto Pull Workflow
-
+name: SSH Pull Workflow
 on:
   push:
     branches:
       - main
-
 jobs:
-  pull:
+  ssh_pull_job:
     runs-on: ubuntu-latest
     steps:
-      - name: Configure SSH
-        uses: webfactory/ssh-agent@v0.5.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Pull latest changes
-        run: |
-          ssh root@159.65.144.36 "cd /tmp/test && git pull"
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Setup SSH
+      uses: webfactory/ssh-agent@v0.5.0
+      with:
+        host: ${{ secrets.HOST }}
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    - name: Pull from remote repository
+      run: |
+        cd /tmp/test
+        git pull
+
