--- a/.github/workflows/autopull.yml
+++ b/.github/workflows/autopull.yml
@@ -16,6 +16,5 @@ jobs:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
     - name: Pull from remote repository
       run: |
-        cd /tmp/test
-        git pull
+        ssh root@159.65.144.36 "cd /tmp/test && git pull"
 
