--- a/.github/workflows/autopull.yml
+++ b/.github/workflows/autopull.yml
@@ -16,5 +16,6 @@ jobs:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
     - name: Pull from remote repository
       run: |
-        ssh root@159.65.144.36 "cd /tmp/test && git pull"
+        cd /tmp/test
+        git pull
 
