--- a/.github/workflows/autopull.yml
+++ b/.github/workflows/autopull.yml
@@ -1,18 +1,22 @@
-name: Auto Pull Workflow
+name: Auto pull changes to SSH repository
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   pull:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Configure SSH
-        uses: webfactory/ssh-agent@v0.5.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Pull latest changes
         run: |
-          ssh root@159.65.144.36 "cd /tmp/test && git pull"
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan 159.65.144.36 >> ~/.ssh/known_hosts
+      - name: Push changes to SSH repository
+        run: |
+          ssh root@159.65.144.36 'cd /tmp/test && git pull'
+
